all files ready to code

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-telli-gent</title>
+  <title>E-telli-gent - About</title>
 </head>
 
 <body>
