hero and nav bar done

--- a/index.html
+++ b/index.html
@@ -4,8 +4,58 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>E-telli-gent</title>
+  <title>E-telli-gent - Home</title>
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
+
+<!--HEADER-->
+
+<header>
+  <!--NAV BAR-->
+  <nav>
+    <div class="wrapper">
+      <div class="nav-container">
+        <span class="logo"><span class="accent-color">E</span>-telli-gent</span>
+        <label for="toggle"><img class='menu' src='./assets/hamburger.svg' aria-hidden="true"><span
+            class="sr-only">Menu</span></label>
+        <input type="checkbox" id="toggle" name="toggle" />
+        <ul>
+          <li><a href="#home" title="Click here to go to the homepage">Home</a></li>
+          <li><a href="#about" title="Click here to go to our about page">About</a></li>
+          <li><a href="#contact" title="Click here to go to our contact page">Contact </a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="hero">
+    <div class="hero-text-split">
+      <h1>A global leader in providing e-telli-gent solutions</h1>
+      <p>E-telli-gent is a global leader in providing a focused, broder range of services to a world-class,
+        international , region centric clientelle</p>
+      <div class="chevron">
+        <img class="chevron-image" src="./assets/red-arrow.png" alt="Scroll Arrow Down">
+      </div>
+      <button>See Features</button>
+    </div>
+    <div class="hero-image-split"></div>
+  </div>
+  <div class="social-icons hero-split-icons">
+    <a href="https://twitter.com" class="social-icon-box twitter"><img src="./assets/twitter-icon.svg"
+        alt="Click here to visit our Twitter page">
+    </a>
+    <a href="https://facebook.com" class="social-icon-box facebook"><img src="./assets/facebook-icon.svg"
+        alt="Click here to visit our Facebook page">
+    </a>
+    <a href="https://instagram.com" class="social-icon-box instagram"><img src="./assets/instagram-icon.svg"
+        alt="Click here to visit our Instagram page">
+    </a>
+    <a href="https://linkedin.com" class="social-icon-box linkedin"><img src="./assets/linkedin-icon.svg"
+        alt="Click here to visit our LinkedIn page">
+    </a>
+  </div>
+</header>
 
 <body>
 
