index page almost complete

--- a/index.html
+++ b/index.html
@@ -12,52 +12,208 @@
 
 <!--HEADER-->
 
-<header>
-  <!--NAV BAR-->
-  <nav>
-    <div class="wrapper">
-      <div class="nav-container">
-        <span class="logo"><span class="accent-color">E</span>-telli-gent</span>
-        <label for="toggle"><img class='menu' src='./assets/hamburger.svg' aria-hidden="true"><span
-            class="sr-only">Menu</span></label>
-        <input type="checkbox" id="toggle" name="toggle" />
-        <ul>
-          <li><a href="#home" title="Click here to go to the homepage">Home</a></li>
-          <li><a href="#about" title="Click here to go to our about page">About</a></li>
-          <li><a href="#contact" title="Click here to go to our contact page">Contact </a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <div class="hero">
-    <div class="hero-text-split">
-      <h1>A global leader in providing e-telli-gent solutions</h1>
-      <p>E-telli-gent is a global leader in providing a focused, broder range of services to a world-class,
-        international , region centric clientelle</p>
-      <div class="chevron">
-        <img class="chevron-image" src="./assets/red-arrow.png" alt="Scroll Arrow Down">
-      </div>
-      <button>See Features</button>
-    </div>
-    <div class="hero-image-split"></div>
-  </div>
-  <div class="social-icons hero-split-icons">
-    <a href="https://twitter.com" class="social-icon-box twitter"><img src="./assets/twitter-icon.svg"
-        alt="Click here to visit our Twitter page">
-    </a>
-    <a href="https://facebook.com" class="social-icon-box facebook"><img src="./assets/facebook-icon.svg"
-        alt="Click here to visit our Facebook page">
-    </a>
-    <a href="https://instagram.com" class="social-icon-box instagram"><img src="./assets/instagram-icon.svg"
-        alt="Click here to visit our Instagram page">
-    </a>
-    <a href="https://linkedin.com" class="social-icon-box linkedin"><img src="./assets/linkedin-icon.svg"
-        alt="Click here to visit our LinkedIn page">
-    </a>
-  </div>
-</header>
-
 <body>
+
+  <header>
+    <!--NAV BAR-->
+    <nav>
+      <div class="wrapper">
+        <div class="nav-container">
+          <span class="logo"><span class="accent-color">E</span>-telli-gent</span>
+          <label for="toggle"><img class='menu' src='./assets/hamburger.svg' aria-hidden="true"><span
+              class="sr-only">Menu</span></label>
+          <input type="checkbox" id="toggle" name="toggle" />
+          <ul>
+            <li><a class="nav-link" href="#home" title="Click here to go to the homepage">Home</a></li>
+            <li><a class="nav-link" href="#about" title="Click here to go to our about page">About</a></li>
+            <li><a class="nav-link" href="#contact" title="Click here to go to our contact page">Contact </a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!-- HERO -->
+    <div class="hero">
+      <div class="hero-text-split">
+        <div class="text-label">Established 1997</div>
+        <h1>A global leader in providing e-telli-gent solutions</h1>
+        <p class="description">E-telli-gent is a global leader in providing a focused, broder range of services to a
+          world-class,
+          international , region centric clientelle</p>
+
+        <div class="chevron">
+          <img class="chevron-image" src="./assets/chevron-teal.svg" alt="Scroll Arrow Down">
+        </div>
+        <button>See Features</button>
+        <!-- SOCIAL ICONS -->
+        <div class="social-icons-container">
+          <a href="https://twitter.com" class="social-icon-box twitter"><img src="./assets/twitter-icon.svg"
+              alt="Click here to visit our Twitter page">
+          </a>
+          <a href="https://facebook.com" class="social-icon-box facebook"><img src="./assets/facebook-icon.svg"
+              alt="Click here to visit our Facebook page">
+          </a>
+          <a href="https://instagram.com" class="social-icon-box instagram"><img src="./assets/instagram-icon.svg"
+              alt="Click here to visit our Instagram page">
+          </a>
+          <a href="https://linkedin.com" class="social-icon-box linkedin"><img src="./assets/linkedin-iconn.svg"
+              alt="Click here to visit our LinkedIn page">
+          </a>
+        </div>
+      </div>
+      <div class="hero-image-split"></div>
+
+    </div>
+
+  </header>
+
+  <!-- SECTION ONE: SERVICES -->
+
+  <div class="services section">
+    <div class="wrapper">
+      <div class="title-container">
+        <div class="text-label">Text Label</div>
+        <h2>"E"xperience our Services</h2>
+        <div class="divider"></div>
+        <p class="description">We help people grow their business</p>
+      </div>
+      <div class="service-cards-container">
+        <div class="service-card">
+          <div class="icon-box">
+            <img src="./assets/white-heart.svg" alt="*****INSERT TEXT HERE**************">
+          </div>
+          <h3>E-Commerce</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius incidunt delectus cumque reiciendis mollitia
+            cum?</p>
+        </div>
+
+        <div class="service-card">
+          <div class="icon-box">
+            <img src="./assets/white-heart.svg" alt="*****INSERT TEXT HERE**************">
+          </div>
+          <h3>SMART Tech</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius incidunt delectus cumque reiciendis mollitia
+            cum?
+          </p>
+        </div>
+
+        <div class="service-card">
+          <div class="icon-box">
+            <img src="./assets/white-heart.svg" alt="*****INSERT TEXT HERE**************">
+          </div>
+          <h3>World Class Service</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius incidunt delectus cumque reiciendis mollitia
+            cum?
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="feature section">
+    <div class="wrapper">
+      <div class="feature-container">
+        <div class="side-content">
+          <div class="text-label">About Us</div>
+          <h2>About E-telli-gent</h2>
+          <div class="divider"></div>
+          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptatibus quidem,
+            recusandae rerum molestias eveniet.</p>
+        </div>
+        <div class="side-media">
+          <div class="frame">
+            <img src="./assets/hero-image.jpeg" alt="***HELLO INSERT ME****">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="feature section">
+    <div class="wrapper">
+      <div class="feature-container">
+
+        <div class="side-media flip">
+          <div class="frame flip">
+            <img class="flip" src="./assets/hero-image.jpeg" alt="***HELLO INSERT ME****">
+          </div>
+        </div>
+        <div class="side-content">
+          <div class="text-label">About Us</div>
+          <h2>About E-telli-gent</h2>
+          <div class="divider"></div>
+          <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae voluptatibus quidem,
+            recusandae rerum molestias eveniet.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+  <footer>
+    <div class="wrapper">
+      <div class="footer-container">
+
+        <!--footer first content-->
+
+        <div class="textContainer">
+          <h4>E-telli-gent</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia similique maxime at, aut accusamus corporis.
+          </p>
+          <div class="social-icons-container">
+            <a href="https://twitter.com" class="social-icon-box twitter"><img src="./assets/twitter-icon.svg"
+                alt="Click here to visit our Twitter page">
+            </a>
+            <a href="https://facebook.com" class="social-icon-box facebook"><img src="./assets/facebook-icon.svg"
+                alt="Click here to visit our Facebook page">
+            </a>
+            <a href="https://instagram.com" class="social-icon-box instagram"><img src="./assets/instagram-icon.svg"
+                alt="Click here to visit our Instagram page">
+            </a>
+            <a href="https://linkedin.com" class="social-icon-box linkedin"><img src="./assets/linkedin-iconn.svg"
+                alt="Click here to visit our LinkedIn page">
+            </a>
+          </div>
+        </div>
+
+        <!-- footer second content // Footer Navigation -->
+
+        <ul class="textContainer">
+          <h4>Navigation</h4>
+          <li><a class="nav-link" href="#" title="Click here to go to the homepage">Home</a></li>
+          <li><a class="nav-link" href="#" title="Click here to go to the about page">About</a></li>
+          <li><a class="nav-link" href="#" title="Click here to go to Travel's Twitter Page">Contact</a></li>
+        </ul>
+
+        <ul class="textContainer">
+          <h4>Get In Touch</h4>
+          <li><a class="nav-link" href="#" title="Click here to go to the homepage">2540 Kensington Road NW, Calgary, AB
+              T2N 3S3</a></li>
+          <li><a class="nav-link" href="#" title="Click here to go to the about page">info@etelligent.ca</a></li>
+          <li><a class="nav-link" href="#" title="Click here to go to Travel's Twitter Page">+1 (403) 555-1234</a></li>
+        </ul>
+
+        <!-- footer third content -->
+
+        <div class="textContainer">
+          <h4>Subscribe To Our Newsletter</h4>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia similique maxime at, aut accusamus corporis.
+          </p>
+          <form action="#" method="POST" class="contact-form" name="contact-form">
+            <label for="userEmail" class="sr-only">Provide your Email Address</label>
+            <input type="email" id="email" name="email" required placeholder="email address">
+            <button type="submit">Subscribe</button>
+        </div>
+
+      </div>
+  </footer>
+
+  <!-- copyright  -->
+
+  <div class="copyright">
+    <div class="wrapper">
+      <h4>Made with &#x2764 by Haris Shaikh</h4>
+    </div>
+  </div>
 
 </body>
 
