--- a/about.html
+++ b/about.html
@@ -5,9 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>E-telli-gent - About</title>
+  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+
+  <p>Contact Us</p>
+  <form class="contact-form" action="contact-form.php" method="POST">
+    <label for="userFirstName" class="sr-only">Provide your First Name</label>
+    <input type="text" name="name" placeholder="First Name" required="true">
+    <label for="userLastName" class="sr-only">Provide your Last Name</label>
+    <input type="text" name="mail" placeholder="Last Name" required="true">
+    <label for="userEmail" class="sr-only">Provide your a e-mail address</label>
+    <input type="email" name="subject" placeholder="E-Mail Address">
+    <label for="subject" class="sr-only">Provide your a subject or title for your message</label>
+    <input type="text" name="subject" placeholder="Subject">
+
+    <label for="userMessage" class="sr-only">Type Your Message To Send</label>
+    <textarea name="message" placeholder="Message" cols="70" rows="10" required="true"></textarea>
+    <button type="submit" name="submit">Send Message</button>
+  </form>
 
 </body>
 
